<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    app:cardCornerRadius="13dp"
    app:cardElevation="6dp"
    android:layout_gravity="center"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="#DAE5"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/nama_barang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/namabrang"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/gambar_detail"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/gambar"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/hargabarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/deskripsi1"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/ket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/deskripsi2"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/warna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/deskripsi3"
            android:textSize="25sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/bt_share"
            android:layout_width="243dp"
            android:layout_height="73dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:onClick="shareItem"
            android:text="@string/share"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>